# src/Back-end/RiddleMeThis/RiddleMeThis/Dto/Usuario.cs
@@ -4,8 +4,14 @@ namespace RiddleMeThis.Dto
     public class UsuarioDto
     {
         [Required]
+        public int id { get; set; }
+
+        [Required]
         [MaxLength(100)]
-        public string nome { get; set; }
+        public string? nome { get; set; }
+
+        [Required]
+        public int quizzes_feitos { get; set; }
 
     }
 }
